{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 15,
  "lineage": "b5d87d4a-6359-7b57-603b-6bbcf8cba092",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sam_instance",
      "provider": "module.instances.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06cc5ebfb8571a147",
            "arn": "arn:aws:ec2:ap-south-1:588082971984:instance/i-09d5420e0721ad953",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d5420e0721ad953",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sam-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c3ba55d21782552",
            "private_dns": "ip-10-0-1-59.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.59",
            "public_ip": "13.201.6.54",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b51237d92ed0038e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05af1e2e47476ee5e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d6728016a0d7026",
            "tags": {
              "Name": "sam-nginx-instance-1"
            },
            "tags_all": {
              "Name": "sam-nginx-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05af1e2e47476ee5e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.Sam_subnet_1",
            "module.network.aws_vpc.Sam_auto_vpc",
            "module.security.aws_security_group.sam_sec_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Sam_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588082971984:internet-gateway/igw-05668670457ea20b9",
            "id": "igw-05668670457ea20b9",
            "owner_id": "588082971984",
            "region": "ap-south-1",
            "tags": {
              "Name": "Sam_igw"
            },
            "tags_all": {
              "Name": "Sam_igw"
            },
            "vpc_id": "vpc-09700f6303fd0c336"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.Sam_auto_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Sam_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588082971984:route-table/rtb-00c3dddcf5dd5a888",
            "id": "rtb-00c3dddcf5dd5a888",
            "owner_id": "588082971984",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05668670457ea20b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Sam_route_table"
            },
            "tags_all": {
              "Name": "Sam_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09700f6303fd0c336"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.Sam_igw",
            "module.network.aws_vpc.Sam_auto_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Sam_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f66ba6fcf85d4d27",
            "region": "ap-south-1",
            "route_table_id": "rtb-00c3dddcf5dd5a888",
            "subnet_id": "subnet-06d6728016a0d7026"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.Sam_igw",
            "module.network.aws_route_table.Sam_route_table",
            "module.network.aws_subnet.Sam_subnet_1",
            "module.network.aws_vpc.Sam_auto_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Sam_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588082971984:subnet/subnet-06d6728016a0d7026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d6728016a0d7026",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588082971984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "sam-subnet_Sam_subnet_1"
            },
            "tags_all": {
              "Name": "sam-subnet_Sam_subnet_1"
            },
            "vpc_id": "vpc-09700f6303fd0c336"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.Sam_auto_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Sam_auto_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588082971984:vpc/vpc-09700f6303fd0c336",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e06cc5397d22d63f",
            "default_route_table_id": "rtb-09493102ae8dadfca",
            "default_security_group_id": "sg-0d275ff2285b822f7",
            "dhcp_options_id": "dopt-0ddbfd454056a668d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09700f6303fd0c336",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09493102ae8dadfca",
            "owner_id": "588082971984",
            "region": "ap-south-1",
            "tags": {
              "Name": "Sam_auto_vpc"
            },
            "tags_all": {
              "Name": "Sam_auto_vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sam_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588082971984:security-group/sg-05af1e2e47476ee5e",
            "description": "Allow HTTP and HTTPS access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05af1e2e47476ee5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AllowHttp,Https Access",
            "name_prefix": "",
            "owner_id": "588082971984",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AllowHttp,Https Access"
            },
            "tags_all": {
              "Name": "AllowHttp,Https Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-09700f6303fd0c336"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "588082971984",
            "id": "sg-05af1e2e47476ee5e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_vpc.Sam_auto_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588082971984:security-group-rule/sgr-0271fa31e2030c15b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0271fa31e2030c15b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-05af1e2e47476ee5e",
            "security_group_rule_id": "sgr-0271fa31e2030c15b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.Sam_auto_vpc",
            "module.security.aws_security_group.sam_sec_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588082971984:security-group-rule/sgr-085854e7389d8cf02",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-085854e7389d8cf02",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-05af1e2e47476ee5e",
            "security_group_rule_id": "sgr-085854e7389d8cf02",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.Sam_auto_vpc",
            "module.security.aws_security_group.sam_sec_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588082971984:security-group-rule/sgr-0f2a5803ae7d65f7a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0f2a5803ae7d65f7a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-05af1e2e47476ee5e",
            "security_group_rule_id": "sgr-0f2a5803ae7d65f7a",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.Sam_auto_vpc",
            "module.security.aws_security_group.sam_sec_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588082971984:security-group-rule/sgr-0d8b1908a3d906dae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d8b1908a3d906dae",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-05af1e2e47476ee5e",
            "security_group_rule_id": "sgr-0d8b1908a3d906dae",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.Sam_auto_vpc",
            "module.security.aws_security_group.sam_sec_group"
          ]
        }
      ]
    }
  ]
}